--- a/.htaccess
+++ b/.htaccess
@@ -4,10 +4,10 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php/$1 [L]
 
 <IfModule mod_php73.c>
-php_value post_max_size 5000
-php_value upload_max_filesize 64M
-php_value memory_limit 4000
-php_value max_file_uploads 64M
+php_value post_max_size 1000M
+php_value upload_max_filesize 1000M
+php_value memory_limit 1000M
+php_value max_file_uploads 50
 </IfModule>
 
 IndexOptions +Charset=UTF-8
